product_docs/docs/jdbc_connector/42.5.4.1/05_using_the_advanced_server_jdbc_connector_with_java_applications/02_connecting_to_the_database/01_additional_connection_properties.mdx
---
title: "Additional connection properties"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/jdbc-connector/user-guides/jdbc-guide/42.2.12.3/additional_connection_properties.html"
  - "/edb-docs/d/jdbc-connector/user-guides/jdbc-guide/42.2.9.1/additional_connection_properties.html"
  - "/edb-docs/d/jdbc-connector/user-guides/jdbc-guide/42.2.8.1/additional_connection_properties.html"
  - "/edb-docs/d/jdbc-connector/user-guides/jdbc-guide/42.2.12.1/additional_connection_properties.html"
---

<div id="additional_connection_properties" class="registered_link"></div>

In addition to the standard connection parameters, the EDB Postgres Advanced Server JDBC driver supports connection properties that control behavior specific to `EDB`. You can specify these properties in the connection URL or as a `Properties` object parameter passed to `DriverManager.getConnection()`. The example shows how to use a `Properties` object to specify additional connection properties:

```java
String url = "jdbc:edb://localhost/edb";
Properties props = new Properties();

props.setProperty("user", "enterprisedb");
props.setProperty("password", "enterprisedb");
props.setProperty("sslfactory", "com.edb.ssl.NonValidatingFactory");
props.setProperty("ssl", "true");

Connection con = DriverManager.getConnection(url, props);
```

!!! Note
    By default, the combination of `SSL=true` and setting the connection URL parameter `sslfactory=org.postgresql.ssl.NonValidatingFactory` encrypts the connection but doesn't validate the SSL certificate. To enforce certificate validation, you must use a `Custom SSLSocketFactory`. For more details about writing a `Custom SSLSocketFactory`, see the [the PostgreSQL JDBC driver documentation](https://jdbc.postgresql.org/documentation/head/ssl-factory.html).

To specify additional connection properties in the URL, add a question mark and an ampersand-separated list of keyword-value pairs:

`String url = "jdbc:edb://localhost/edb?user=enterprisedb&ssl=true";`

Some of the additional connection properties are shown in the following table.

|         Name          |  Type   |                                                                                                                                                                                                                                                                                                 Description                                                                                                                                                                                                                                                                                                 |
| --------------------- | ------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| user                  | String  | The database user on whose behalf the connection is being made.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| password              | String  | The database user’s password.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| ssl                   | Boolean | Requests an authenticated, encrypted SSL connection.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| charSet               | String  | The value of `charSet` determines the character set used for data sent to or received from the database.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| prepareThreshold      | Integer | The value of `prepareThreshold` determines the number of `PreparedStatement` executions required before switching to server-side prepared statements. The default is five.                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| loadBalanceHosts      | Boolean | In default mode (disabled) hosts are connected in the given order. If enabled, hosts are chosen randomly from the set of suitable candidates.                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| targetServerType      | String  | Allows opening connections to only servers with the required state. The allowed values are `any`, `primary`, `secondary`, `preferSecondary`, and `preferSyncSecondary`. The primary/secondary distinction is currently done by observing if the server allows writes. The value `preferSecondary` tries to connect to secondaries if any are available, otherwise allows connecting to the primary. The EDB Postgres Advanced Server JDBC Connector supports `preferSyncSecondary`, which permits connection to only synchronous secondaries or the primary if there are no active synchronous secondaries. |
| skipQuotesOnReturning | Boolean | When set to `true`, column names from the `RETURNING` clause aren't quoted. This eliminates a case-sensitive comparison of the column name. When set to `false` (the default setting), column names are quoted.                                                                                                                                                                                                                                                                                                                                                                                             |
| changeServerName      | Boolean | The `getServerName()` call in `PgConnection.java` returns `EnterpriseDB`. If `changeServerName` is set to `true`, it returns the value as `PostgreSQL`. The default value is `false`.                                                                                                                                                                                                                                                                                                                                                                                                                       |
| forceBinaryTransfer   | Boolean | If the value is set to `true`, forces the transfer of all binary types from the PostgreSQL server to the JDBC driver in their binary form. The default value is `false`.                                                                                                                                                                                                                                                                                                                                                                                                                                    |